--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>解锁华师建筑，重温华师记忆！</title>
+  <title>你去过华师哪些地方?</title>
 </head>
 
 <body>
